Modify league/picks endpoint to return selected captains by each manager. Modify naming convention: rename participants to managers
